redesigned portfolio window

--- a/apps/welcome/welcome.html
+++ b/apps/welcome/welcome.html
@@ -39,12 +39,14 @@
         </p>
         <h2>Other personal projects?</h2>
         <p>
-            You can view my other projects and their code by clicking on the "portfolio" icon to the top left.
+            <a id="portfolio-link">Click here to open the portfolio window</a>
         </p>
     </section>
     <div id="landscape-img-container">
         <img src="./assets/pixelated-landscape.png" alt="pixelated cloudy landscape image">
     </div>
 </body>
+
+<script src="./script.js"></script>
 
 </html>
