updated description for file-viewer project

--- a/apps/portfolio/portfolio.html
+++ b/apps/portfolio/portfolio.html
@@ -61,8 +61,13 @@
             <p>
                 A Spring Boot server that allows for file retrieval and storage. Access is controlled by a user's access
                 level, with low access levels meaning fewer files you have permission to view.
-                Also does stuff like connect to a MySql database, encrypt (and decrypt) files on disk, and exposes a
-                REST api to communicate with.
+                Also does stuff like connect to a MySql database, encrypt (and decrypt) files on disk, and expose a
+                REST api to communicate with. 
+                <br>
+                <br>
+                I also wrote some unit and integration tests for it.
+                <br>
+                <span>_(:3」∠)_</span>
             </p>
             <img src="./assets/file-viewer.gif">
         </div>
